--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Gohur Ali</h1>
+<p>Github: www.github.com/gohurali</p>
+<p>LinkedIn: www.linkedin.com/in/gohurali</p>
 </body>
 </html>
