--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <center><h1>Gohur Ali</h1></center>
+  <center>
+    <h1>Gohur Ali</h1>
+  </center>
 <p>Github: www.github.com/gohurali</p>
 <p>LinkedIn: www.linkedin.com/in/gohurali</p>
 </body>
