--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <center>
     <h1>Gohur Ali</h1>
   </center>
+  GitHub: <a href = "www.github.com/gohurali"> gohurali </a>
 <p>Github: www.github.com/gohurali</p>
 <p>LinkedIn: www.linkedin.com/in/gohurali</p>
 </body>
