--- a/index.html
+++ b/index.html
@@ -2,11 +2,30 @@
 <!--Gohur Ali's GitHub Page -->
 <html>
 <body>
-  <center>
-    <h1>Gohur Ali</h1>
+  <style>
+  body{background-color: white;}
+
+  /*Title Header*/
+  h1{
+    font-family: courier;
+    font-size: 300%;
+  }
+
+  h2{
+    font-family: Arial;
+    font-size: 100%;
+  }
+  </style>
+
+  <center> <h1>Gohur Ali</h1>
   </center>
-  GitHub: <a href = "https://www.github.com/gohurali"> gohurali </a>
-<p>Github: www.github.com/gohurali</p>
-<p>LinkedIn: www.linkedin.com/in/gohurali</p>
+
+<h2>
+  GitHub: <a href = "https://www.github.com/gohurali"> gohurali </a> <br>
+
+Github: www.github.com/gohurali<br>
+LinkedIn: www.linkedin.com/in/gohurali
+</h2>
+
 </body>
 </html>
