Added About Me section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!--Gohur Ali's GitHub Page -->
 <html>
 <body>
+
+  <!-- ===============================CSS========================== -->
   <style>
   body{background-color: white;}
 
@@ -13,19 +15,32 @@
 
   h2{
     font-family: Arial;
-    font-size: 100%;
+    font-size: 150%;
+  }
+
+  h3{
+    font-family: Arial;
+    font-size: 75%;
   }
   </style>
+  <!-- ===============================CSS========================== -->
 
   <center> <h1>Gohur Ali</h1>
   </center>
 
-<h2>
-  GitHub: <a href = "https://www.github.com/gohurali"> gohurali </a> <br>
-
-Github: www.github.com/gohurali<br>
+<h2>Links</h2>
+<h3>
+GitHub: <a href = "https://www.github.com/gohurali"> gohurali </a> <br>
 LinkedIn: www.linkedin.com/in/gohurali
-</h2>
+</h3>
+
+<h2>About Me</h2>
+
+<h3>
+I'm a second year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.
+I'm interested in artificial intelligence, machine learning, and cloud computing. Currently I'm spending the
+summer break taking CSS 430 (Operating Systems) and CSS 475 (Database Systems).
+</h3>
 
 </body>
 </html>
