Added a navigation bar and subpages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<!--Gohur Ali's GitHub Page -->
+<!--
+Gohur Ali's GitHub Page Currently Under Heavy Construction 
+index.html is the main homepage of the website
+-->
 <html>
 <body>
 
@@ -25,8 +28,14 @@
   </style>
   <!-- ===============================CSS========================== -->
 
-  <center> <h1>Gohur Ali</h1>
-  </center>
+<!-- Creation of Top Navigation Bar -->
+<div class="navBar">
+  <a href="index.html">Home</a>
+  <a href="pastEnrollments.html">Past Enrollments</a>
+  <a href="contact.html">Contact</a>
+</div>
+
+  <center> <h1>Gohur Ali</h1> </center>
 
 <h2>Links</h2>
 <h3>
@@ -38,7 +47,7 @@ LinkedIn: www.linkedin.com/in/gohurali
 
 <h3>
 I'm a second year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.
-I'm interested in artificial intelligence, machine learning, and cloud computing. Currently I'm spending the
+I'm interested in artificial intelligence, machine learning, and cloud computing. Currently, I'm spending the
 summer break taking CSS 430 (Operating Systems) and CSS 475 (Database Systems).
 </h3>
 
