--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,27 @@
 <html>
+
+<!-- ===============================CSS========================== -->
+<style>
+body{background-color: white;}
+
+/*Title Header*/
+h1{
+  font-family: courier;
+  font-size: 300%;
+}
+
+h2{
+  font-family: Arial;
+  font-size: 150%;
+}
+
+h3{
+  font-family: Arial;
+  font-size: 75%;
+}
+</style>
+<!-- ===============================CSS========================== -->
+
 <!-- Creation of Top Navigation Bar -->
 <div class="navBar">
   <a href="index.html">Home</a>
@@ -7,6 +30,11 @@
 </div>
 
 
-Hi! Contact is under construction.
+<h2>Contact Me!</h2>
+<h3>
+GitHub: <a href = "https://www.github.com/gohurali"> gohurali </a> <br>
+LinkedIn: www.linkedin.com/in/gohurali <br>
+Email: gohurali@uw.edu
+</h3>
 
 </html>
