--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Gohur Ali's GitHub Page Currently Under Heavy Construction 
+Gohur Ali's GitHub Page Currently Under Heavy Construction
 index.html is the main homepage of the website
 -->
 <html>
@@ -29,19 +29,32 @@ index.html is the main homepage of the website
   <!-- ===============================CSS========================== -->
 
 <!-- Creation of Top Navigation Bar -->
-<div class="navBar">
-  <a href="index.html">Home</a>
-  <a href="pastEnrollments.html">Past Enrollments</a>
-  <a href="contact.html">Contact</a>
-</div>
+<nav>
+  <div class="navBar">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="pastEnrollments.html">Past Enrollments</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </div>
+</nav>
+
+<style>
+nav{
+  background-color: green;
+}
+
+.navBar{
+  /*Removes Bullet Points from List Objects from navBar*/
+  list-style: none;
+}
+
+li{
+  color: blue;
+}
+
+
+</style>
 
   <center> <h1>Gohur Ali</h1> </center>
-
-<h2>Links</h2>
-<h3>
-GitHub: <a href = "https://www.github.com/gohurali"> gohurali </a> <br>
-LinkedIn: www.linkedin.com/in/gohurali
-</h3>
 
 <h2>About Me</h2>
 
