--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,51 @@
 <html>
 
-<!-- ===============================CSS========================== -->
-<style>
-body{background-color: white;}
+<!-- Header Area -->
+<head>
+  <!-- Getting Fonts from Google Fonts API -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
 
-/*Title Header*/
-h1{
-  font-family: courier;
-  font-size: 300%;
-}
+  <!-- ===============================CSS========================== -->
+  <style>
+    body{background-color: #252730;}
 
-h2{
-  font-family: Arial;
-  font-size: 150%;
-}
+    /*Title Header*/
+    h1 {
+      font-family: Dosis;
+      font-size: 500%;
+      color: white;
+    }
 
-h3{
-  font-family: Arial;
-  font-size: 75%;
-}
-</style>
-<!-- ===============================CSS========================== -->
+    h2 {
+      font-family: Arial;
+      font-size: 150%;
+      color: white;
+    }
 
-<!-- Creation of Top Navigation Bar -->
-<div class="navBar">
-  <a href="index.html">Home</a>
-  <a href="pastEnrollments.html">Past Enrollments</a>
-  <a href="contact.html">Contact</a>
-</div>
+    h3 {
+      font-family: Arial;
+      font-size: 75%;
+      color: white;
+    }
+  </style>
+  <!-- ===============================CSS========================== -->
+
+    <!-- Linking External CSS File for Navigation Bar -->
+    <link href="nav.css" rel="stylesheet" type="text/css">
+
+    <center> <h1>Gohur Ali</h1> </center>
+</head>
+
+<body>
+  
+  <!-- Creation of Top Navigation Bar -->
+  <nav>
+    <div class="navBar">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="pastEnrollments.html">Past Enrollments</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </div>
+  </nav>
 
 
 <h2>Contact Me!</h2>
@@ -36,5 +54,6 @@ GitHub: <a href = "https://www.github.com/gohurali"> gohurali </a> <br>
 LinkedIn: www.linkedin.com/in/gohurali <br>
 Email: gohurali@uw.edu
 </h3>
+</body>
 
 </html>
