--- a/index.html
+++ b/index.html
@@ -4,57 +4,54 @@ Gohur Ali's GitHub Page Currently Under Heavy Construction
 index.html is the main homepage of the website
 -->
 <html>
-<body>
+
+<!-- Header Area -->
+<head>
+  <!-- Getting Fonts from Google Fonts API -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
 
   <!-- ===============================CSS========================== -->
   <style>
-  body{background-color: white;}
+    body{background-color: #252730;}
 
-  /*Title Header*/
-  h1{
-    font-family: courier;
-    font-size: 300%;
-  }
+    /*Title Header*/
+    h1 {
+      font-family: Dosis;
+      font-size: 500%;
+      color: white;
+    }
 
-  h2{
-    font-family: Arial;
-    font-size: 150%;
-  }
+    h2 {
+      font-family: Arial;
+      font-size: 150%;
+      color: white;
+    }
 
-  h3{
-    font-family: Arial;
-    font-size: 75%;
-  }
+    h3 {
+      font-family: Arial;
+      font-size: 75%;
+      color: white;
+    }
   </style>
   <!-- ===============================CSS========================== -->
 
-<!-- Creation of Top Navigation Bar -->
-<nav>
-  <div class="navBar">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="pastEnrollments.html">Past Enrollments</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </div>
-</nav>
+    <!-- Linking External CSS File for Navigation Bar -->
+    <link href="nav.css" rel="stylesheet" type="text/css">
+    <center> <h1>Gohur Ali</h1> </center>
+</head>
 
-<style>
-nav{
-  background-color: green;
-}
+<!-- Body Area -->
+<body>
 
-.navBar{
-  /*Removes Bullet Points from List Objects from navBar*/
-  list-style: none;
-}
+  <!-- Creation of Top Navigation Bar -->
+  <nav>
+    <div class="navBar">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="pastEnrollments.html">Past Enrollments</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </div>
+  </nav>
 
-li{
-  color: blue;
-}
-
-
-</style>
-
-  <center> <h1>Gohur Ali</h1> </center>
 
 <h2>About Me</h2>
 
