--- a/pastEnrollments.html
+++ b/pastEnrollments.html
@@ -1,16 +1,48 @@
 <html>
 
+<!-- Header Area -->
+<head>
+  <!-- Getting Fonts from Google Fonts API -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
 
+  <!-- ===============================CSS========================== -->
+  <style>
+    body{background-color: #252730;}
+
+    /*Title Header*/
+    h1 {
+      font-family: Dosis;
+      font-size: 500%;
+      color: white;
+    }
+
+    h2 {
+      font-family: Arial;
+      font-size: 150%;
+      color: white;
+    }
+
+    h3 {
+      font-family: Arial;
+      font-size: 75%;
+      color: white;
+    }
+  </style>
+  <!-- ===============================CSS========================== -->
+
+    <!-- Linking External CSS File for Navigation Bar -->
+    <link href="nav.css" rel="stylesheet" type="text/css">
+    <center> <h1>Gohur Ali</h1> </center>
+</head>
 
 <!-- Creation of Top Navigation Bar -->
-<div class="navBar">
-  <a href="index.html">Home</a>
-  <a href="pastEnrollments.html">Past Enrollments</a>
-  <a href="contact.html">Contact</a>
-</div>
+<nav>
+  <div class="navBar">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="pastEnrollments.html">Past Enrollments</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </div>
+</nav>
 
-Hi! Past Enrollments is under construction.
-
-Create a table maybe..
 
 </html>
