--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
   <!-- Getting Fonts from Google Fonts API -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
 
   <!-- ===============================CSS========================== -->
   <style>
@@ -17,13 +18,13 @@
     }
 
     h2 {
-      font-family: Arial;
+      font-family: 'Karla';
       font-size: 150%;
       color: white;
     }
 
     h3 {
-      font-family: Arial;
+      font-family: 'Karla';
       font-size: 75%;
       color: white;
     }
@@ -33,20 +34,19 @@
     <!-- Linking External CSS File for Navigation Bar -->
     <link href="nav.css" rel="stylesheet" type="text/css">
 
-    <center> <h1>Gohur Ali</h1> </center>
+    <!-- Creation of Top Navigation Bar -->
+    <nav>
+      <div class="navBar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pastEnrollments.html">Past Enrollments</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </div>
+    </nav>
+
+    <center> <h1>Gohur Ali</h1></center>
 </head>
 
 <body>
-  
-  <!-- Creation of Top Navigation Bar -->
-  <nav>
-    <div class="navBar">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="pastEnrollments.html">Past Enrollments</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </div>
-  </nav>
-
 
 <h2>Contact Me!</h2>
 <h3>
