--- a/index.html
+++ b/index.html
@@ -5,61 +5,69 @@ index.html is the main homepage of the website
 -->
 <html>
 
-<!-- Header Area -->
-<head>
-  <!-- Getting Fonts from Google Fonts API -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
+  <!-- Header Area -->
+  <head>
+    <title>Gohur Ali Homepage</title>
+    <!-- Getting Fonts from Google Fonts API -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
+    <!-- ===============================CSS========================== -->
+    <style>
+      body{background-color: #252730;}
 
-  <!-- ===============================CSS========================== -->
-  <style>
-    body{background-color: #252730;}
+      /*Title Header*/
+      h1 {
+        font-family: Dosis;
+        font-size: 500%;
+        color: white;
+      }
 
-    /*Title Header*/
-    h1 {
-      font-family: Dosis;
-      font-size: 500%;
-      color: white;
-    }
+      h2 {
+        font-family: 'Karla';
+        font-size: 290%;
+        color: white;
+      }
 
-    h2 {
-      font-family: Arial;
-      font-size: 150%;
-      color: white;
-    }
+      h3 {
+        font-family: 'Karla';
+        font-size: 200%;
+        color: white;
+      }
 
-    h3 {
-      font-family: Arial;
-      font-size: 75%;
-      color: white;
-    }
-  </style>
-  <!-- ===============================CSS========================== -->
+      img{
+        border-radius: 50%;
+      }
+    </style>
+    <!-- ===============================CSS========================== -->
 
-    <!-- Linking External CSS File for Navigation Bar -->
-    <link href="nav.css" rel="stylesheet" type="text/css">
-    <center> <h1>Gohur Ali</h1> </center>
-</head>
+      <!-- Linking External CSS File for Navigation Bar -->
+      <link href="nav.css" rel="stylesheet" type="text/css">
+
+      <!-- Creation of Top Navigation Bar -->
+      <nav>
+        <div class="navBar">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="pastEnrollments.html">Past Enrollments</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </div>
+      </nav>
+
+      <center> <h1>Gohur Ali</h1> </center>
+  </head>
 
 <!-- Body Area -->
-<body>
+  <body>
 
-  <!-- Creation of Top Navigation Bar -->
-  <nav>
-    <div class="navBar">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="pastEnrollments.html">Past Enrollments</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </div>
-  </nav>
+  <img src="grad.jpg" alt="grad speech photo" align="right" >
 
+    <h3>
+    I'm a second year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.<br><br>
+    I'm interested in artificial intelligence, machine learning, and cloud computing. <br><br>
+    Currently, I'm spending the
+    summer break taking CSS 430 (Operating Systems) and CSS 475 (Database Systems).<br><br>
 
-<h2>About Me</h2>
+    Check out my past course enrollments on the Past Enrollments page!
+    </h3>
 
-<h3>
-I'm a second year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.
-I'm interested in artificial intelligence, machine learning, and cloud computing. Currently, I'm spending the
-summer break taking CSS 430 (Operating Systems) and CSS 475 (Database Systems).
-</h3>
-
-</body>
+  </body>
 </html>
