--- a/pastEnrollments.html
+++ b/pastEnrollments.html
@@ -4,6 +4,7 @@
 <head>
   <!-- Getting Fonts from Google Fonts API -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
 
   <!-- ===============================CSS========================== -->
   <style>
@@ -17,13 +18,13 @@
     }
 
     h2 {
-      font-family: Arial;
+      font-family: 'Karla';
       font-size: 150%;
       color: white;
     }
 
     h3 {
-      font-family: Arial;
+      font-family: 'Karla';
       font-size: 75%;
       color: white;
     }
@@ -32,17 +33,97 @@
 
     <!-- Linking External CSS File for Navigation Bar -->
     <link href="nav.css" rel="stylesheet" type="text/css">
+
+    <!-- Creation of Top Navigation Bar -->
+    <nav>
+      <div class="navBar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pastEnrollments.html">Past Enrollments</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </div>
+    </nav>
+
     <center> <h1>Gohur Ali</h1> </center>
 </head>
 
-<!-- Creation of Top Navigation Bar -->
-<nav>
-  <div class="navBar">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="pastEnrollments.html">Past Enrollments</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </div>
-</nav>
+<body>
+
+  <!-- ===============================CSS========================== -->
+  <style>
+    th{
+      color: white;
+      font-weight: bolder;
+      font-family: 'Karla'
+    }
+    td{
+      color: white;
+      font-family: 'Karla'
+    }
+
+    table, td, th {
+    border: 1px solid white;
+}
+
+  </style>
+  <!-- ===============================CSS========================== -->
+
+
+  <!-- Table of past course! -->
+  <center>
+  <table style="width=100%;">
+    <tr>
+
+      <th>Course Number</th>
+      <th>Course Name</th>
+
+    </tr>
+
+    <tr>
+      <td>CSS 161/142</td>
+      <td>Fundamentals of Programming</td>
+    </tr>
+
+    <tr>
+      <td>CSS 143</td>
+      <td>Programming Methodology</td>
+    </tr>
+
+    <tr>
+      <td>CSS 301</td>
+      <td>Technical Writing for Computing Professionals</td>
+    </tr>
+
+    <tr>
+      <td>CSS 342</td>
+      <td>Data Structures, Algorithms, and Discrete Mathematics I</td>
+    </tr>
+
+    <tr>
+      <td>CSS 343</td>
+      <td>Data Structures, Algorithms, and Discrete Mathematics II</td>
+    </tr>
+
+    <tr>
+      <td>CSS 350</td>
+      <td>Management Principles for Computing Professionals</td>
+    </tr>
+
+    <tr>
+      <td>CSS 360</td>
+      <td>Software Engineering</td>
+    </tr>
+
+    <tr>
+      <td>CSS 490</td>
+      <td>Special Topics in Computing and Software Systems: <br>Space Operations and Systems Engineering</td>
+    </tr>
+
+  </table>
+</center>
+
+</body>
+
+
 
 
 </html>
