Added new projects page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ index.html is the main homepage of the website
       <nav>
         <div class="navBar">
           <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
           <li><a href="pastEnrollments.html">Past Enrollments</a></li>
           <li><a href="contact.html">Contact</a></li>
         </div>
@@ -66,7 +67,7 @@ index.html is the main homepage of the website
     Currently, I'm spending the
     summer break taking CSS 430 (Operating Systems) and CSS 475 (Database Systems).<br><br>
 
-    Check out my past course enrollments on the Past Enrollments page!
+    Check out my CS course history on the Past Enrollments page!
     </h3>
 
   </body>
