--- a/pastEnrollments.html
+++ b/pastEnrollments.html
@@ -38,6 +38,7 @@
     <nav>
       <div class="navBar">
         <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="pastEnrollments.html">Past Enrollments</a></li>
         <li><a href="contact.html">Contact</a></li>
       </div>
