--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,4 @@
 <html>
-
 <!-- Header Area -->
 <head>
   <!-- Getting Fonts from Google Fonts API -->
@@ -49,12 +48,7 @@
 
 <body>
 
-<h2>Contact Me!</h2>
-<h3>
-GitHub: <a href = "https://www.github.com/gohurali"> gohurali </a> <br>
-LinkedIn: www.linkedin.com/in/gohurali <br>
-Email: gohurali@uw.edu
-</h3>
-</body>
+  <h2>Huffman Coding</h2>
 
+</body>
 </html>
