Renamed Passed Enrollments to Coursework

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Gohur Ali's GitHub Page Currently Under Heavy Construction
+Gohur Ali's GitHub Page is Currently Under Heavy Construction!
 index.html is the main homepage of the website
 -->
 <html>
@@ -13,7 +13,10 @@ index.html is the main homepage of the website
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
     <!-- ===============================CSS========================== -->
     <style>
-      body{background-color: #252730;}
+      body{
+        background-color: #252730;
+
+      }
 
       /*Title Header*/
       h1 {
@@ -35,7 +38,9 @@ index.html is the main homepage of the website
       }
 
       img{
+        /*Crops the image into a circle*/
         border-radius: 50%;
+        width: 500px;
       }
     </style>
     <!-- ===============================CSS========================== -->
@@ -48,7 +53,7 @@ index.html is the main homepage of the website
         <div class="navBar">
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="pastEnrollments.html">Past Enrollments</a></li>
+          <li><a href="pastEnrollments.html">Coursework</a></li>
           <li><a href="contact.html">Contact</a></li>
         </div>
       </nav>
@@ -59,15 +64,16 @@ index.html is the main homepage of the website
 <!-- Body Area -->
   <body>
 
-  <img src="grad.jpg" alt="grad speech photo" align="right" >
+  <img src="grad.jpg" alt="grad speech photo" align="right" style="margin:50px;">
 
-    <h3>
-    I'm a second year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.<br><br>
-    I'm interested in artificial intelligence, machine learning, and cloud computing. <br><br>
-    Currently, I'm spending the
-    summer break taking CSS 430 (Operating Systems) and CSS 475 (Database Systems).<br><br>
+    <h3 style="margin:50px;">
+      Welcome to my website!<br><br>
+      I'm a second year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.<br><br>
+      I'm interested in artificial intelligence, machine learning, and cloud computing. <br><br>
+      Currently, I'm spending the
+      summer break taking CSS 430 (Operating Systems) and CSS 475 (Database Systems).<br><br>
 
-    Check out my CS course history on the Past Enrollments page!
+      Check out my CS course history on the Coursework page!
     </h3>
 
   </body>
