--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
       <div class="navBar">
         <li><a href="index.html">Home</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="pastEnrollments.html">Past Enrollments</a></li>
+        <li><a href="pastEnrollments.html">Coursework</a></li>
         <li><a href="contact.html">Contact</a></li>
       </div>
     </nav>
