Fixed Photo Path

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ index.html is the main homepage of the website
 <!-- Body Area -->
   <body>
 
-  <img src="Photos/grad.jpg" alt="grad speech photo" align="right" style="margin:50px;">
+  <img src="/Photos/grad.jpg" alt="grad speech photo" align="right" style="margin:50px;">
 
     <h3 style="margin:50px;">
       Welcome to my website!<br><br>
