--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ index.html is the main homepage of the website
   <img src="Photos/grad.jpg" alt="grad speech photo" align="right" style="margin:50px;">
     <h3 style="margin:50px;">
       Welcome to my website!<br><br>
-      I'm a second year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.<br><br>
+      I'm a third year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.<br><br>
       I'm interested in artificial intelligence, machine learning, and cloud computing. <br><br>
       Currently, I'm spending the
       summer break taking CSS 430 (Operating Systems) and CSS 475 (Database Systems).<br><br>
