List items -> white with Karla font

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@ index.html is the main homepage of the website
         border-radius: 50%;
         width: 500px;
       }
+      li{
+        font-family: "Karla";
+        color: white;
+      }
+
     </style>
     <!-- ===============================CSS========================== -->
       <!-- Linking External CSS File for Navigation Bar -->
