Updated Course list

--- a/pastEnrollments.html
+++ b/pastEnrollments.html
@@ -115,6 +115,16 @@
     </tr>
 
     <tr>
+      <td>CSS 430</td>
+      <td>Operating Systems</td>
+    </tr>
+
+    <tr>
+      <td>CSS 475</td>
+      <td>Database Systems</td>
+    </tr>
+
+    <tr>
       <td>CSS 490</td>
       <td>Special Topics in Computing and Software Systems: <br>Space Operations and Systems Engineering</td>
     </tr>
