Added brief project descriptions

--- a/projects.html
+++ b/projects.html
@@ -18,13 +18,13 @@
 
     h2 {
       font-family: 'Karla';
-      font-size: 150%;
+      font-size: 290%;
       color: white;
     }
 
     h3 {
       font-family: 'Karla';
-      font-size: 75%;
+      font-size: 150%;
       color: white;
     }
   </style>
@@ -48,7 +48,17 @@
 
 <body>
 
+  <h2>Shell Terminal for ThreadOS (Operating System Simulator)</h2>
+  <h3>
+  In this program I created a simple terminal for an OS Simulator that runs arguments that can be delimited by a semicolon or ampersand
+  symbol. When a semicolon delimiter is used the arguments are run sequentially, whereas when an ampersand is used, the arguments are run
+  concurrently.
+  </h3>
+
   <h2>Huffman Coding</h2>
+  <h3>
+  In this program I created a text file compression and decompression program utilizing bit manipulation.
+  </h3>
 
 </body>
 </html>
