Added Header comments

--- a/pastEnrollments.html
+++ b/pastEnrollments.html
@@ -1,3 +1,7 @@
+<!--
+Gohur Ali's GitHub Page is Currently Under Heavy Construction!
+pastEnrollments.html holds the course list that I have taken
+-->
 <html>
 
 <!-- Header Area -->
