--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,8 @@
+<!--
+Gohur Ali's GitHub Page is Currently Under Heavy Construction!
+projects.html will contain the projects that I have completed or am currently
+working on.
+-->
 <html>
 <!-- Header Area -->
 <head>
@@ -47,7 +52,6 @@
 </head>
 
 <body>
-
   <h2>Shell Terminal for ThreadOS (Operating System Simulator)</h2>
   <h3>
   In this program I created a simple terminal for an OS Simulator that runs arguments that can be delimited by a semicolon or ampersand
@@ -59,6 +63,5 @@
   <h3>
   In this program I created a text file compression and decompression program utilizing bit manipulation.
   </h3>
-
 </body>
 </html>
