--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ index.html is the main homepage of the website
 <html>
   <!-- Header Area -->
   <head>
-    <title>Gohur Ali Homepage</title>
+    <title>Gohur Ali</title>
     <!-- Getting Fonts from Google Fonts API -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
