--- a/pastEnrollments.html
+++ b/pastEnrollments.html
@@ -6,6 +6,7 @@ pastEnrollments.html holds the course list that I have taken
 
 <!-- Header Area -->
 <head>
+  <title>Past Enrollments</title>
   <!-- Getting Fonts from Google Fonts API -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
