--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@ working on.
 <html>
 <!-- Header Area -->
 <head>
+  <title>Projects</title>
   <!-- Getting Fonts from Google Fonts API -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
