--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 
 <!-- Header Area -->
 <head>
+  <title>Contact Me</title>
   <!-- Getting Fonts from Google Fonts API -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
