updating index.html

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ index.html is the main homepage of the website
       Currently, I'm spending the
       summer break taking CSS 430 (Operating Systems) and CSS 475 (Database Systems).<br><br>
 
+      I am also actively applying to Software Engineering Internships.
+
       Check out my CS course history on the Coursework page!
     </h3>
   </body>
