Updating huffman project

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@ working on.
 
   <h2>Huffman Coding</h2>
   <h3>
-  In this program I created a text file compression and decompression program utilizing bit manipulation.
+  In this program I created a text file compression and decompression program utilizing bit manipulation. I built this in C++ with the help of some bash scripts to help compile and run my programs easier.
   </h3>
 </body>
 </html>
