--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,7 @@ working on.
   <h2>Huffman Coding</h2>
   <h3>
   In this program I created a text file compression and decompression program utilizing bit manipulation. I built this in C++ with the help of some bash scripts to help compile and run my programs easier.
+  Implemented a priority queue that holds contents of a text file and creates a Huffman Tree. Using bit manipulation, created a symbol of coded symbols and wrote pertinent information for the encoded file. Implemented a decoder that recreated the original file using a personal implementation of a bit reader.
   </h3>
 </body>
 </html>
