--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@ index.html is the main homepage of the website
   <img src="Photos/grad.jpg" alt="grad speech photo" align="right" style="margin:50px;">
     <h3 style="margin:50px;">
       Welcome to my website!<br><br>
-      I'm a third year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.<br><br>
+      I'm a third year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.
+      Currently, I'm an intern at AVA Retail.AI focusing on computer vision.<br><br>
       I'm interested in artificial intelligence, machine learning, and cloud computing. <br><br>
-
-      I am also actively applying to Software Engineering Internships.
 
       Check out my CS course history on the Coursework page!
     </h3>
