--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ index.html is the main homepage of the website
     <h3 style="margin:50px;">
       Welcome to my website!<br><br>
       I'm a third year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.
-      Currently, I'm an intern at AVA Retail.AI focusing on computer vision.<br><br>
+      Currently, I'm a Software Engineer intern at AVA Retail.AI focusing on computer vision.<br><br>
       I'm interested in artificial intelligence, machine learning, and cloud computing. <br><br>
 
       Check out my CS course history on the Coursework page!
