--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ index.html is the main homepage of the website
         <div class="navBar">
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
+          <li><a href="publications.html">Publications</a></li>
           <li><a href="pastEnrollments.html">Coursework</a></li>
           <li><a href="contact.html">Contact</a></li>
         </div>
