linking pub page in all pages

--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,14 @@
 
     <!-- Creation of Top Navigation Bar -->
     <nav>
-      <div class="navBar">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="pastEnrollments.html">Coursework</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </div>
-    </nav>
+        <div class="navBar">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="publications.html">Publications</a></li>
+          <li><a href="pastEnrollments.html">Coursework</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </div>
+      </nav>
 
     <center> <h1>Gohur Ali</h1></center>
 </head>
