added resume page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ index.html is the main homepage of the website
           <li><a href="projects.html">Projects</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="pastEnrollments.html">Coursework</a></li>
+          <li><a href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
         </div>
       </nav>
