--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ index.html is the main homepage of the website
   <img src="Photos/grad.jpg" alt="grad speech photo" align="right" style="margin:50px;">
     <h3 style="margin:50px;">
       Welcome to my website!<br><br>
-      I'm a third year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.
-      Currently, I'm a Software Engineer intern at AVA Retail.AI focusing on computer vision and machine learning.<br><br>
+      I'm a fourth year student at the Univeristy of Washington Bothell studying Computer Science and Software Engineering.
+      Formerly, I was a Machine Learning intern at AVA Retail.AI focusing on computer vision and machine/deep learning.<br><br>
       I'm interested in artificial intelligence, deep learning, and machine learning. <br><br>
 
       Check out my CS course history on the Coursework page!
