--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@
 
     h2 {
       font-family: 'Karla';
-      font-size: 150%;
+      font-size: 50px;
       color: white;
     }
 
     h3 {
       font-family: 'Karla';
-      font-size: 75%;
+      font-size: 35px;
       color: white;
     }
   </style>
@@ -36,25 +36,26 @@
 
     <!-- Creation of Top Navigation Bar -->
     <nav>
-        <div class="navBar">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="publications.html">Publications</a></li>
-          <li><a href="pastEnrollments.html">Coursework</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </div>
-      </nav>
+      <div class="navBar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="publications.html">Publications</a></li>
+        <li><a href="pastEnrollments.html">Coursework</a></li>
+        <li><a href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </div>
+    </nav>
     <center> <h1>Gohur Ali</h1></center>
 </head>
 
-<body>
-
-<h2>Contact Me!</h2>
-<h3>
-GitHub: <a href = "https://www.github.com/gohurali"> gohurali </a> <br>
-LinkedIn: www.linkedin.com/in/gohurali <br>
-Email: gohurali@uw.edu
-</h3>
-</body>
+<div class="main">
+  <body>
+    <h2>Contact Me!</h2>
+    <h3>
+    <a href = "www.linkedin.com/in/gohurali">My LinkedIn page</a><br>
+    Email: gohurali@live.com
+    </h3>
+  </body>
+</div>
 
 </html>
