--- a/pastEnrollments.html
+++ b/pastEnrollments.html
@@ -46,6 +46,7 @@ pastEnrollments.html holds the course list that I have taken
           <li><a href="projects.html">Projects</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="pastEnrollments.html">Coursework</a></li>
+          <li><a href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
         </div>
       </nav>
