--- a/projects.html
+++ b/projects.html
@@ -26,12 +26,14 @@ working on.
       font-family: 'Karla';
       font-size: 290%;
       color: white;
+      margin:50px;
     }
 
     h3 {
       font-family: 'Karla';
       font-size: 150%;
       color: white;
+      margin:50px;
     }
   </style>
   <!-- ===============================CSS========================== -->
@@ -41,30 +43,33 @@ working on.
 
     <!-- Creation of Top Navigation Bar -->
     <nav>
-        <div class="navBar">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="publications.html">Publications</a></li>
-          <li><a href="pastEnrollments.html">Coursework</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </div>
-      </nav>
+      <div class="navBar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="publications.html">Publications</a></li>
+        <li><a href="pastEnrollments.html">Coursework</a></li>
+        <li><a href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </div>
+    </nav>
 
     <center> <h1>Gohur Ali</h1></center>
 </head>
 
-<body>
-  <h2>Shell Terminal for ThreadOS (Operating System Simulator)</h2>
-  <h3>
-  In this program I created a simple terminal for an OS Simulator that runs arguments that can be delimited by a semicolon or ampersand
-  symbol. When a semicolon delimiter is used the arguments are run sequentially, whereas when an ampersand is used, the arguments are run
-  concurrently.
-  </h3>
+  <div class="main">
+    <body>
+      <h2>Shell Terminal for ThreadOS (Operating System Simulator)</h2>
+      <h3>
+      In this program I created a simple terminal for an OS Simulator that runs arguments that can be delimited by a semicolon or ampersand
+      symbol. When a semicolon delimiter is used the arguments are run sequentially, whereas when an ampersand is used, the arguments are run
+      concurrently.
+      </h3>
 
-  <h2>Huffman Coding</h2>
-  <h3>
-  In this program I created a text file compression and decompression program utilizing bit manipulation. I built this in C++ with the help of some bash scripts to help compile and run my programs easier.
-  Implemented a priority queue that holds contents of a text file and creates a Huffman Tree. Using bit manipulation, created a symbol of coded symbols and wrote pertinent information for the encoded file. Implemented a decoder that recreated the original file using a personal implementation of a bit reader.
-  </h3>
-</body>
+      <h2>Huffman Coding</h2>
+      <h3>
+      In this program I created a text file compression and decompression program utilizing bit manipulation. I built this in C++ with the help of some bash scripts to help compile and run my programs easier.
+      Implemented a priority queue that holds contents of a text file and creates a Huffman Tree. Using bit manipulation, created a symbol of coded symbols and wrote pertinent information for the encoded file. Implemented a decoder that recreated the original file using a personal implementation of a bit reader.
+      </h3>
+    </body>
+  </div>
 </html>
