--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ index.html is the main homepage of the website
     <!-- Getting Fonts from Google Fonts API -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet"> 
     <!-- ===============================CSS========================== -->
     <style>
       body{
@@ -17,7 +18,7 @@ index.html is the main homepage of the website
       }
       /*Title Header*/
       h1 {
-        font-family: Dosis;
+        font-family: 'Source Code Pro', monospace;
         font-size: 500%;
         color: white;
       }
@@ -59,8 +60,9 @@ index.html is the main homepage of the website
           <li><a href="contact.html">Contact</a></li>
         </div>
       </nav>
+
       <center>
-        <h1 style="margin-top:1px">Gohur Ali</h1> 
+        <h1 style="margin-top:1px;">gohur ali</h1> 
       </center>
   </head>
 
