--- a/index.html
+++ b/index.html
@@ -45,18 +45,27 @@ index.html is the main homepage of the website
       }
     </style>
     <!-- ===============================CSS========================== -->
-      <!-- Linking External CSS File for Navigation Bar -->
-      <link href="nav.css" rel="stylesheet" type="text/css">
+    <!-- Linking External CSS File for Navigation Bar -->
+    <link href="nav.css" rel="stylesheet" type="text/css">
+
+    <style>
+    /*Attributes for the Line Objects*/
+    li{
+      display: inline-block;  /*Makes the list horizontal*/
+      margin-left: 10px;      /*Defines the space between - 70px*/
+      margin-right: 10px;
+      margin-top: 30px;
+    }
+    </style>
+
 
       <!-- Creation of Top Navigation Bar -->
       <nav>
         <div class="navBar">
           <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="publications.html">Publications</a></li>
-          <li><a href="pastEnrollments.html">Coursework</a></li>
           <li><a href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
-          <li><a href="contact.html">Contact</a></li>
         </div>
       </nav>
 
